# wiki-wizard

./: .dockerignore  .gitignore  LICENSE  README.md  SKILL.md  TUTORIAL.ko.md  TUTORIAL.md  TUTORIAL_DESIGN_SYSTEM.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
backends/: claude.json  codex.json  gemini.json  opencode.json
commands/: autoresearch.md  create.md  delete.md  dispatch.md  edit.md  find.md  hot-cache.md  import.md  ingest.md  lint.md  migrate.md  move.md  open.md  persona-audit.md  persona-consistency.md  persona-curate-index.md  persona-factcheck.md  persona-librarian.md  persona-memo-curate.md  persona-orchestrate.md  persona-polish.md  persona-research.md  persona-scaffold.md  persona-source-curate.md  persona-summarize.md  persona-terminology.md  persona-translate.md  query.md  review.md  swarm-monitor.md  team-run.md  team.md  vault-forget.md  vault-import-memo.md  vault-list.md  vault-setup.md  vault-use.md
docker/: Dockerfile  README.md  docker-compose.yml
hooks/: hooks.json
omw/: SKILL.md
personas/: consistency-checker.md  curator.md  fact-checker.md  memo-curator.md  moderator.md  operations-orchestrator.md  perspective-writer.md  polisher.md  researcher.md  scaffolder.md  source-curator.md  summarizer.md  terminology-manager.md  translator.md  wiki-auditor.md  wiki-librarian.md
references/: adapter-spec.md  architecture.md  frontmatter.md  messenger-api.md  schema-sqlite.md  socratic-dialog.md  vault-modes.md  wizard-flow.md
schemas/: base.yml  entity.yml  meta.yml
scripts/: adapters.py  autoresearch.py  backends.py  banner.py  config.py  dispatch.py  entity_link.py  frontmatter.py  fts.py  glossary.py  hot_cache.py  import_memo.py  import_source.py  ingest.py  inline_fields.py  links.py  lint.py  memo_ops.py  omw_cli.py  paths.py  persona_export.py  personas.py  query.py  registry.py  reindex.py  review.py  schema.py  search.py  search_index.py  server.py  (+10 more)
(+138 files in other folders)
