[project]
name = "oh-my-wiki"
version = "2.2.0"
description = "Karpathy-style LLM Wiki skill with multi-vault sqlite registry and Socratic wizard"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"
