[project]
name = "oh-my-wiki"
version = "2.6.0"
description = "Karpathy-style LLM Wiki skill with multi-vault sqlite registry and Socratic wizard"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "pypdf>=4.0",
]

[project.scripts]
omw = "scripts.omw_cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-rerunfailures>=14",
    "ruff>=0.6",
]
wizard = ["questionary>=2.0"]

[tool.setuptools.packages.find]
include = ["scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "integration: end-to-end tests that require tmux and fake backends",
    "flaky: known-flaky test (auto-reruns via pytest-rerunfailures)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
